--- a/public/style.css
+++ b/public/style.css
@@ -1,9 +1,10 @@
-#articles {
+/* #articles {
     display: grid;
     grid-template-columns: repeat(4, auto);
     grid-gap: 20px;
-}
+} */
 
 .card {
+    width: 20rem;
     display:inline-block;
 }
